# Media-Downloader-Launcher

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: constants.h  mdprocess.h  types.h  utils.h
src/: main.c  mdprocess.c
src/unx/: mdprocess.c
src/win/: mdprocess.c
